--- a/apps/Pokemon Fighter App/index.html
+++ b/apps/Pokemon Fighter App/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Test</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="src\js\initPokedex.js"></script>
 </head>
 <body>
     <div>
@@ -21,14 +22,15 @@
     <div>
         <table id="menu">
             <tr>
-                <td><button class="buttonDef fight"><span>> </span>Fight</button></td>
-                <td><button class="buttonDef bag"><span>> </span>Bag</button></td>
+                <td><button class="buttonDef fight"><span class="selector">> </span><span class="btnName">Fight</span></button></td>
+                <td><button class="buttonDef bag"><span class="selector">> </span><span class="btnName">Bag</span></button></td>
             </tr>
             <tr>
-                <td><button class="buttonDef party"><span>> </span>Pokemon</button></td>
-                <td><button class="buttonDef run"><span>> </span>Run</button></td>
+                <td><button class="buttonDef party"><span class="selector">> </span><span class="btnName">Pokemon</span></button></td>
+                <td><button class="buttonDef run"><span class="selector">> </span><span class="btnName">Run</span></button></td>
             </tr>
         </table>
+        <script src="src\js\menu.js"></script>
     </div>
 </body>
 </html>
