Updated Pokemon Fighter

--- a/apps/Pokemon Fighter App/src/index.html
+++ b/apps/Pokemon Fighter App/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Test</title>
+    <title>Pokemon Fighter</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="js\initPokedex.js"></script>
     <script src="js\control.js"></script>
@@ -17,10 +17,12 @@
     <div class="graphics">
         <canvas id="background"></canvas>
         <canvas id="foreground"></canvas>
+        <canvas id="status"></canvas>
         <canvas id="sprites"></canvas>
         <script src="js\canvas.js"></script>
     </div>
     <div class="interactions">
+        <p class="dialog">Hello</p>
         <table id="menu">
             <tr>
                 <td><button class="buttonDef fight"><span class="selector">> </span><span class="btnName">Fight</span></button></td>
